# cdft4pyscf

./: .coveragerc  .gitignore  DETAILS.md  LICENSE  README.md  pyproject.toml  zensical.toml
cdft4pyscf/: __init__.py  api.py  cdft4pyscf.py  constraints.py  exceptions.py  meanfield.py  models.py  population.py  projectors.py  solver.py
docs/: api-reference.md  api-workflow.md  api.md  examples.md  index.md  installation.md  usage.md
examples/: atcne-test.py  atcne_net_charge.py  electron_difference.py  fa-aq.xyz  fa-aq_example.py  h2o_electron_number.py  method_comparison.py
examples/structures/: equilibrium_complex.sdf  equilibrium_complex.xyz  spacing=2.5.xyz  spacing=3.0.xyz  spacing=3.174119669519719.xyz  spacing=3.1742050982276573.xyz  spacing=3.5.xyz  spacing=4.0.xyz  spacing=4.5.xyz  spacing=5.0.xyz
tests/: __init__.py  test_acceptance_matrix.py  test_constraints.py  test_models.py  test_population.py  test_solver_cpu.py  test_solver_gpu.py  test_stub.py
