[project]
name = "cdft4pyscf"
description = "cdft4pyscf"
license = "MIT"
version = "0.1.0"
readme = "README.md"
keywords = []
authors = [{name = "Carson Farmer"}]
requires-python = ">=3.12"
dependencies = [
    "pyscf>=2.12.1,<3",
    "pydantic>=2.12.5,<3",
    "scipy>=1.16.0,<2",
]

[project.optional-dependencies]
gpu = [
    "gpu4pyscf-cuda13x>=1.6.1,<2",
    "cupy-cuda13x>=14.0.1,<15",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cdft4pyscf = { path = ".", editable = true, extras = ["gpu"] }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}
docs = { features = ["docs"], solve-group = "default"}
gpu = { features = ["gpu"], solve-group = "default"}
dev-gpu = { features = ["dev", "gpu"], solve-group = "default"}

[tool.pixi.feature.gpu.activation.env]
CUDA_PATH="$PWD/.pixi/envs/gpu/targets/x86_64-linux"
LD_LIBRARY_PATH="$CUDA_PATH/lib:$LD_LIBRARY_PATH"

[tool.pixi.feature.gpu.dependencies]
cuda = ">=13.0.0,<14"
cupy = ">=14.0.1,<15"

[tool.pixi.feature.gpu.pypi-dependencies]
gpu4pyscf-cuda13x = ">=1.6.1,<2"

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="ty check" }
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
pre-commit = ">=4.2"

[tool.pixi.feature.dev.pypi-dependencies]
ty = "*"
marimo = "*"

[tool.pixi.feature.docs.pypi-dependencies]
zensical = ">=0.0.29"

[tool.pixi.feature.docs.tasks]
docs-serve = { cmd = "zensical serve" }
docs-build = { cmd = "zensical build --clean" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests", "cdft4pyscf"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["pyzmq>=27.1.0,<28"]
